# humanoid_amp

./: .gitignore  AGENT.md  README.md  __init__.py  agent.md  download_lafan1.sh  g1_amp_env.py  g1_amp_env_cfg.py  g1_amp_poprioception_constants.py  g1_amp_poprioception_env.py  g1_amp_poprioception_env_cfg.py  g1_amp_poprioception_rewards.py  g1_amp_poprioception_scene.py  g1_cfg.py  humanoid_amp_env.py  humanoid_amp_env_cfg.py  play.py  play_deploy.py  play_deploy.sh  play_velocity_track.py  play_with_velocity.py  project.md  pyproject.toml  sync_skrl_scripts.sh  train.py
agents/: skrl_g1_amp_poprioception_cfg.yaml  skrl_g1_custom_amp_cfg.yaml  skrl_g1_dance_amp_cfg.yaml  skrl_g1_deploy_amp_cfg.yaml  skrl_g1_walk_amp_cfg.yaml  skrl_g1_walk_custom_amp_cfg.yaml
configs/: eval_velocity_tracking.yaml  play_speed_32.example.json
docs/: @experiment_plan.md  BUG_EXPERIENCE.md  DEV_LOG.md  deploy_g1.md  plan_ablation_history_obs.md  plan_add_last_actions.md  plan_fix_history_reset.md  plan_g1_amp_poprioception.md  plan_modify_policy_obs.md  plan_raycaster_perception.md  plan_single_task_cleanup.md  plan_training_efficiency.md  plan_velocity_tracking_eval.md  project_tactile_exploration_mapping.md
hzdocs/: 项目说明文档.md
motions/: 01_01_poses.npz  143_25_poses.npz  143_26_poses.npz  143_27_poses.npz  20_08_poses.npz  G1_walk_lafan1.npz  README.md  converted_motion.npz  custom_motion.npz  data_convert.py  motion_config.yaml  motion_loader.py  motion_poprioception.yaml  motion_replayer.py  motion_viewer.py  record_data.py  update_pelvis_data.py  verify_motion.py  (+2 more)
(+9 files in other folders)
